# variantize

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_generator.py  test_parser.py  test_writer.py
tests/fixtures/: _date.py  _date_with_property.py  _point.py
variantize/: cli.py  generator.py  parser.py  writer.py
