[tool.poetry]
name = "variantize"
version = "0.1.2"
description = "Generate all field-omission variants of a Pydantic model"
license = "MIT"
packages = [{ include = "variantize" }]

[tool.poetry.dependencies]
python = ">=3.11"
typer = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.scripts]
variantize = "variantize.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
